--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/jpeg" href="/Logo.jpg" />
+    
+    <!-- Primary Meta Tags -->
     <title>GraphNeon</title>
+    <meta name="title" content="GraphNeon" />
+    <meta name="description" content="GraphNeon is a web-based interactive function grapher. Plot up to 5 functions in real-time, zoom in and out, pan around the graph, and write math expressions with LaTeX. Perfect for students, teachers, and math enthusiasts." />
+    <meta name="keywords" content="function grapher, graph plotter, online graphing calculator, math functions, interactive math, plot functions, coordinate plane, math visualizer, LaTeX graphing, graph functions online, math tool, algebra graphs, real-time plotting, math education, interactive plotting, graphing app, web math tool, mathematical visualization, STEM education, online math graph">
+    <meta name="author" content="KuKe-dev">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href=""/>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Logo.webp">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="GraphNeon" />
+    <meta property="og:description" content="GraphNeon is a web-based interactive function grapher. Plot up to 5 functions in real-time, zoom in and out, pan around the graph, and write math expressions with LaTeX. Perfect for students, teachers, and math enthusiasts." />
+    <meta property="og:image" content="https://i.ibb.co/60pFQWFF/Preview.webp" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="" />
+    <meta property="twitter:title" content="GraphNeon" />
+    <meta property="twitter:description" content="GraphNeon es una página web interactiva diseñada para graficar funciones matemáticas de forma rápida, precisa y visualmente clara. Pensada para estudiantes, docentes y entusiastas de las matemáticas, te permite escribir funciones en notación matemática y ver cómo se representan en un plano cartesiano en tiempo real." />
+    <meta property="twitter:image" content="https://i.ibb.co/60pFQWFF/Preview.webp" />
+
+
   </head>
   <body>
     <div id="root"></div>
