--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <!-- Primary Meta Tags -->
     <title>GraphNeon</title>
     <meta name="title" content="GraphNeon" />
+    <link rel="icon" href="https://i.ibb.co/0p9DWyKF/Logo.webp" type="image/x-icon">
     <meta name="description" content="GraphNeon is a web-based interactive function grapher. Plot up to 5 functions in real-time, zoom in and out, pan around the graph, and write math expressions with LaTeX. Perfect for students, teachers, and math enthusiasts." />
     <meta name="keywords" content="function grapher, graph plotter, online graphing calculator, math functions, interactive math, plot functions, coordinate plane, math visualizer, LaTeX graphing, graph functions online, math tool, algebra graphs, real-time plotting, math education, interactive plotting, graphing app, web math tool, mathematical visualization, STEM education, online math graph">
     <meta name="author" content="KuKe-dev">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href=""/>
+    <link rel="canonical" href="https://graphneon.vercel.app"/>
+    
 
     <!-- Favicon -->
     <link rel="icon" href="/" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="/Logo.webp">
+    <link rel="apple-touch-icon" sizes="720x720" href="https://i.ibb.co/0p9DWyKF/Logo.webp">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://graphneon.vercel.app" />
+    <meta property="og:url" content="https://graphneon.vercel.app/" />
     <meta property="og:title" content="GraphNeon" />
     <meta property="og:description" content="GraphNeon is a web-based interactive function grapher. Plot up to 5 functions in real-time, zoom in and out, pan around the graph, and write math expressions with LaTeX. Perfect for students, teachers, and math enthusiasts." />
     <meta property="og:image" content="https://i.ibb.co/60pFQWFF/Preview.webp" />
@@ -27,7 +30,8 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="" />
+    <meta property="twitter:url" content="https://graphneon.vercel.app" />
+    <meta property="twitter:url" content="https://graphneon.vercel.app/" />
     <meta property="twitter:title" content="GraphNeon" />
     <meta property="twitter:description" content="GraphNeon es una página web interactiva diseñada para graficar funciones matemáticas de forma rápida, precisa y visualmente clara. Pensada para estudiantes, docentes y entusiastas de las matemáticas, te permite escribir funciones en notación matemática y ver cómo se representan en un plano cartesiano en tiempo real." />
     <meta property="twitter:image" content="https://i.ibb.co/60pFQWFF/Preview.webp" />
