--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <meta property="twitter:description" content="GraphNeon es una página web interactiva diseñada para graficar funciones matemáticas de forma rápida, precisa y visualmente clara. Pensada para estudiantes, docentes y entusiastas de las matemáticas, te permite escribir funciones en notación matemática y ver cómo se representan en un plano cartesiano en tiempo real." />
     <meta property="twitter:image" content="https://i.ibb.co/60pFQWFF/Preview.webp" />
 
+    <meta name="google-site-verification" content="WopwRzVr9v5_-jldtkK9tQeuDGqRouzdsu_qX2IxQGQ" />
 
   </head>
   <body>
